--- a/react-cli/package.json
+++ b/react-cli/package.json
@@ -45,6 +45,7 @@
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
+    "antd": "^4.22.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0"
