--- a/vue-cli/package.json
+++ b/vue-cli/package.json
@@ -36,6 +36,8 @@
     "sass": "^1.54.4",
     "sass-loader": "^13.0.2",
     "stylus-loader": "^7.0.0",
+    "unplugin-auto-import": "^0.11.2",
+    "unplugin-vue-components": "^0.22.4",
     "vue-loader": "^17.0.0",
     "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.7.8",
@@ -44,6 +46,7 @@
     "webpack-dev-server": "^4.10.0"
   },
   "dependencies": {
+    "element-plus": "^2.2.15",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
   }
