--- a/webpack-parse/loader/package.json
+++ b/webpack-parse/loader/package.json
@@ -1,5 +1,7 @@
 {
   "devDependencies": {
+    "@babel/core": "^7.19.1",
+    "@babel/preset-env": "^7.19.1",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
