--- a/webpack-parse/loader/package.json
+++ b/webpack-parse/loader/package.json
@@ -2,7 +2,10 @@
   "devDependencies": {
     "@babel/core": "^7.19.1",
     "@babel/preset-env": "^7.19.1",
+    "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "loader-utils": "^3.2.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
