--- a/webpack-parse/plugin/package.json
+++ b/webpack-parse/plugin/package.json
@@ -1,4 +1,9 @@
 {
+  "name": "plugin",
+  "version": "1.0.0",
+  "scripts": {
+    "debug": "node --inspect-brk ./node_modules/webpack-cli/bin/cli.js"
+  },
   "devDependencies": {
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.74.0",
