--- a/webpack-parse/plugin/package.json
+++ b/webpack-parse/plugin/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "safe-require": "^1.0.4",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
