⚙️engines版本号说明

--- a/react-cli/package.json
+++ b/react-cli/package.json
@@ -54,5 +54,9 @@
     "last 2 version",
     "> 1%",
     "not dead"
-  ]
+  ],
+  "engines": {
+    "node": ">=20.11.0",
+    "yarn": ">=1.22.21"
+  }
 }
