--- a/three.js/package.json
+++ b/three.js/package.json
@@ -15,5 +15,9 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
     "vite": "^5.0.8"
+  },
+  "engines": {
+    "node": ">=20.11.0",
+    "pnpm": ">=8.15.1"
   }
 }
