--- a/vue-cli/package.json
+++ b/vue-cli/package.json
@@ -49,5 +49,9 @@
     "element-plus": "^2.2.15",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
+  },
+  "engines": {
+    "node": ">=20.11.0",
+    "yarn": ">=1.22.21"
   }
 }
