--- a/vue3/package.json
+++ b/vue3/package.json
@@ -24,5 +24,9 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
     "typescript": "~4.1.5"
+  },
+  "engines": {
+    "node": ">=20.11.0",
+    "yarn": ">=1.22.21"
   }
 }
